[package]
name = "ex_secp256k1"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_secp256k1"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.36"
libsecp256k1 = "0.7.2"

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
